gccida/g1/reload_cse_simplify_operands
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_simplify_operands/src/reload1.c:8821:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v17; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_simplify_operands/src/reload1.c:8876:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+44h] [rbp-22Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_simplify_operands/src/reload1.c:8887:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !recog_data_0.n_alternatives ) 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_simplify_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_simplify_operands/src/reload1.c:8890:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.n_operands ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_simplify_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_simplify_operands/src/reload1.c:8893:30: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insna, "reload1.c", 8371, "reload_cse_simplify_operands"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_simplify_operands/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_simplify_operands/src/reload1.c:8893:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insna, "reload1.c", 8371, "reload_cse_simplify_operands"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_simplify_operands/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_simplify_operands/src/reload1.c:8894:12: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v2 = 4LL * recog_data_0.n_alternatives; 
           ^~~~~~~~~~~~
           recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_simplify_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_simplify_operands/src/reload1.c:8903:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.n_operands > 0 ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_simplify_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_simplify_operands/src/reload1.c:8909:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v9 = recog_data_0.operand[v6]; 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_simplify_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_simplify_operands/src/reload1.c:8916:41: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( v10 != 140 && v10 != 134 && v11 || recog_data_0.operand_mode[v6] ) 
                                        ^~~~~~~~~~~~
                                        recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_simplify_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_simplify_operands/src/reload1.c:8918:26: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v12 = cselib_lookup( v9, recog_data_0.operand_mode[v6], 0); 
                         ^~~~~~~~~~~~
                         recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_simplify_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_simplify_operands/src/reload1.c:8932:9: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
while ( recog_data_0.n_operands > ( int)v6 ); 
        ^~~~~~~~~~~~
        recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_simplify_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_simplify_operands/src/reload1.c:8933:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.n_operands > 0 ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_simplify_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_simplify_operands/src/reload1.c:8939:18: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
n_alternatives = recog_data_0.n_alternatives; 
                 ^~~~~~~~~~~~
                 recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_simplify_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_simplify_operands/src/reload1.c:8940:30: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v28 = alloca( 16 * ( ( 4LL * recog_data_0.n_alternatives + 23) / 0x10uLL)); 
                             ^~~~~~~~~~~~
                             recog_data
/usr/include/alloca.h:35:41: note: expanded from macro 'alloca'
# define alloca(size)   __builtin_alloca (size)
                                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_simplify_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_simplify_operands/src/reload1.c:8950:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v15 = recog_data_0.constraints[i]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_simplify_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_simplify_operands/src/reload1.c:8952:8: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
mode = recog_data_0.operand_mode[i]; 
       ^~~~~~~~~~~~
       recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_simplify_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_simplify_operands/src/reload1.c:8977:19: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( true_regnum( recog_data_0.operand[i]) < 0 && *p != 43 && *p != 61 ) 
                  ^~~~~~~~~~~~
                  recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_simplify_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_simplify_operands/src/reload1.c:9005:7: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v23 = recog_data_0.operand[i]; 
      ^~~~~~~~~~~~
      recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_simplify_operands/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/reload_cse_simplify_operands/src/obj/reload1.o] Error 1
